--- a/68114030/css/gallary.css
+++ b/68114030/css/gallary.css
@@ -1,7 +1,7 @@
 img{
     width: 100%;
-    height: 500px;
-    margin: auto;
+    height: 300px;
+    margin: 20px;
     border-radius: 20px;
     object-fit: cover;
     opacity: 0.5;
@@ -17,4 +17,5 @@ h1{
 }
 p{
     text-align: center;
+
 }
